FrankfurterExchangeRatesRequest: adjust to superclass changes